--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
+body,div,p,button,input{margin: 0;padding: 0;outline: none;box-sizing: border-box;}
