added angular material library and buttons style

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,20 +23,47 @@
     </div>
     <div class="header__menu">
         <div class="menu__btns">
-            <button>Головна</button>
-            <button>Сервіси</button>
-            <button>Оренда авто</button>
-            <button>Акції</button>
-            <button>Правила</button>
-            <button>Контакти</button>
+            <button>
+                <span class="line-top"></span>
+                <span class="line-right"></span>
+                <span class="line-bottom"></span>
+                <span class="line-left"></span>
+                ГОЛОВНА</button>
+            <button>
+                <span class="line-top"></span>
+                <span class="line-right"></span>
+                <span class="line-bottom"></span>
+                <span class="line-left"></span>
+                СЕРВІСИ</button>
+            <button>
+                <span class="line-top"></span>
+                <span class="line-right"></span>
+                <span class="line-bottom"></span>
+                <span class="line-left"></span>
+                ОРЕНДА АВТО</button>
+            <button>
+                <span class="line-top"></span>
+                <span class="line-right"></span>
+                <span class="line-bottom"></span>
+                <span class="line-left"></span>
+                АКЦІЇ</button>
+            <button>
+                <span class="line-top"></span>
+                <span class="line-right"></span>
+                <span class="line-bottom"></span>
+                <span class="line-left"></span>
+                ПРАВИЛА</button>
+            <button>
+                <span class="line-top"></span>
+                <span class="line-right"></span>
+                <span class="line-bottom"></span>
+                <span class="line-left"></span>
+                КОНТАКТИ</button>
         </div>
         <div class="menu__search">
             <form action="">
-                <div class="form">
-                    <input type="text" name="search">
-                    <input type="button" value="S">
-                </div>
-
+                <input type="text" name="search">
+                <input type="button" value="S">
             </form>
         </div>
     </div>
