--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,7 @@
-@import url('../../shared/styles/_fonts.scss');
+@import '../../shared/styles/_fonts.scss';
+@import '../../shared/styles/_base.scss';
+@import '../../shared/styles/mixins';
+
 
 button {
     font-family: 'Inter', sans-serif;
@@ -60,6 +63,56 @@ header {
         }
     }
     .header__menu {
+        .menu__btns {
+            width: 80%;
+            display: flex;
+            justify-content: space-evenly;
+            button {
+                position: relative;
+                height: 28px;
+                width: 15%;
+                background: transparent;
+                overflow: hidden;
+                transition: 0.3s;
+                border-style: none;
+                color: white;
+                font-family: 'Inter';
+                font-size: 12px;
+                font-weight: 600;
+                letter-spacing: 1px;
+                .line-top {
+                    @include btn-line(absolute, 1px, 100%, -100%, 0, red, 0.3s)
+                }
+                &:hover .line-top {
+                    left: 0;
+                    transition: 0.7s;
+                }
+                .line-right {
+                    @include btn-line(absolute, 100%, 1px, 99%, -100%, red, 0.3s)
+                }
+                &:hover .line-right {
+                    top: 0;
+                    transition: 0.7s;
+                }
+                .line-bottom {
+                    @include btn-line(absolute, 1px, 100%, 100%, 99%, red, 0.3s)
+                }
+                &:hover .line-bottom {
+                    left: 0;
+                    transition: 0.7s;
+                }
+                .line-left {
+                    @include btn-line(absolute, 100%, 1px, 0, 100%, red, 0.3s)
+                }&:hover .line-left {
+                    top: 0;
+                    transition: 0.7s;
+                }
+                &:hover {
+                    background: #0000007a;
+                    transition: 0.7s;
+                }
+            }
+        }
         width: 100%;
         height: 40%;
         background: #0a0a0ad6;
@@ -68,31 +121,32 @@ header {
         align-items: center;
         justify-content: space-between;
         .menu__search {
-            width: 250px;
+            width: 20%;
             height: 100%;
-            .form {
+            form {
                 width: 100%;
+                height: 100%;
                 position: relative;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
                 input[type='text'] {
                     position: absolute;
                     background: #4f4f4f;
                     border-radius: 22px;
-                    box-sizing: content-box;
+                    box-sizing: border-box;
                     padding: 0 30px 0 10px;
-                    // outline: none;
-                    width: 205px;
-                    top: 5.5px;
+                    width: 100%;
                     color: #9ca1a1;
-                    font-size: 16px;
+                    font-size: 14px;
                     height: 37px;
                 }
                 input[type='button'] {
-                    position: absolute;
-                    top: 17px;
-                    left: 222px;
+                    padding-right: 10px;
                     background: none;
                     cursor: pointer;
                     border-style: none;
+                    z-index: 2;
                 }
             }
         }
